# gtfs-upcoming

./: .bazelrc  .gitignore  BUILD  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  aapipfix.py  config-sample.ini  docker-entrypoint.sh  fetch.py  httpd.py  main.py  mypy.ini  nta.py  pyproject.toml  requirements.in  requirements.txt  requirements_lock.txt  transit.py  transit_test.py
.github/workflows/: build.yml
debian/: description  gtfs-upcoming  gtfs-upcoming-update-database  gtfs-upcoming.service  postinst  postrm  prerm  update-database.sh
gtfs_data/: BUILD  database.py  database_test.py  loader.py  loader_test.py  main.py
gtfs_data/testdata/: calendar.txt  calendar_dates.txt  routes.txt  stop_times.txt  stops.txt  trips.txt
src/gtfs_upcoming/: __about__.py  fetch.py  httpd.py  main.py  transit.py
src/gtfs_upcoming/realtime/: __init__.py  fetch.py
src/gtfs_upcoming/schedule/: __init__.py  database.py  loader.py
testdata/: gtfsv1-sample-added.json  gtfsv1-sample-canceled.json  gtfsv1-sample-missing-trip-update.json  gtfsv1-sample-onetrip.json  gtfsv1-sample-twotrips.json  gtfsv1-sample-unexpected-relationships.json  gtfsv1-sample-unknown-trip.json  gtfsv1-sample.json
testdata/schedule/: agency.txt  calendar.txt  routes.txt  trips.txt
tests/gtfs_upcoming/: transit_test.py
tests/gtfs_upcoming/schedule/: database_test.py  loader_test.py
